# glacier-browser

./: .gitignore  CMakeLists.txt  glacier-browser.desktop  glacier-browser.pro
qml/: glacier-browser.qml
qml/components/: AddressLine.qml  WebContentView.qml
qml/pages/: MainPage.qml
rpm/: glacier-browser.spec
src/: CMakeLists.txt  bookmarksmodel.cpp  bookmarksmodel.h  dbadapter.cpp  dbadapter.h  historymodel.cpp  historymodel.h  main.cpp  tabmodel.cpp  tabmodel.h
src/models/: historymodel.cpp  historymodel.h  tabmodel.cpp
src/qml/: glacier-browser.qml  glacier-browser.qrc
src/qml/components/: AddressLine.qml  WebContentView.qml
src/qml/pages/: Bookmarks.qml  MainPage.qml  TabPage.qml
translations/: glacier-browser-ru.ts  glacier-browser.ts  glacier-browser_cs.ts  glacier-browser_de.ts  glacier-browser_es.ts  glacier-browser_fi.ts  glacier-browser_fr.ts  glacier-browser_pl.ts  glacier-browser_ro.ts  glacier-browser_ru.ts  glacier-browser_sk_SK.ts  glacier-browser_uk.ts  glacier-browser_vi.ts
